<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/client_info"
        android:id="@+id/txtClientInfo"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/et_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtRazSoc"
        android:layout_gravity="center_horizontal"
        android:hint="@string/et_razsoc"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|textPersonName"
        android:ems="10"
        android:id="@+id/txtRuc"
        android:layout_gravity="center_horizontal"
        android:hint="@string/et_ruc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/client_contacts"
        android:id="@+id/txtClientAddresses"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:textStyle="bold" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.26" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/client_addresses"
        android:id="@+id/textView"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

</LinearLayout>